--- a/public/src/style/ImageEntry.css
+++ b/public/src/style/ImageEntry.css
@@ -1,13 +1,18 @@
 .imageEntry {
  
   height: 60px;
-  width: 35px;
+  width: 75%;
   border:1px solid #1c1d25;
   background: transparent no-repeat center;
   background-size: cover;
   margin-top: 5px;
   margin-bottom: 5px;
-  padding:1px;
+  padding:4;
+  background-color: white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 'center';
+  float:left;
 }
 
 .imageEntry:hover {
