tried to fixed horizontal image position but failed, start doing zoom in

--- a/public/src/style/Image.css
+++ b/public/src/style/Image.css
@@ -1,6 +1,15 @@
 .image{
   position: relative;
   left:70px;
-  display:block;
-  margin-left: 45px;
+  margin: auto;
+  height: auto;
+  overflow:hidden;
+  justify-content: center;
+}
+
+.imageContainer {
+  height: 500px;
+  width: 500px;
+  padding-left: 6%;
+  display: flex;
 }
