....before using module

--- a/public/src/style/Image.css
+++ b/public/src/style/Image.css
@@ -1,10 +1,12 @@
 .image{
   position: relative;
-  left:70px;
+  left:30px;
   margin: auto;
   height: auto;
   overflow:hidden;
   justify-content: center;
+  height:600px;
+  width:400px;
 }
 
 .imageContainer {
