--- a/public/src/style/Image.css
+++ b/public/src/style/Image.css
@@ -5,13 +5,43 @@
   height: auto;
   overflow:hidden;
   justify-content: center;
-  height:600px;
-  width:400px;
+  height:1600px;
+  width:1400px;
 }
 
 .imageContainer {
-  height: 500px;
-  width: 500px;
+  height: 800px;
+  width: 800px;
   padding-left: 6%;
   display: flex;
+}
+
+.perimeter {
+  max-width: 2000px;
+
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+ .renderImage {
+  height:1600px;
+  width: 1100px; 
+  flex: 0 0 100%;
+} 
+
+ @media (min-width: 415px) {
+  .perimeter {
+    flex-direction: row;
+  }
+  
+  .renderImage {
+    flex: 0 0 50%;
+  }
+}
+
+@media (min-width: 800px) {
+  .renderImage {
+    flex: 0 0 33.5%;
+  }
 }
